--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,5 +30,10 @@
     "tsconfig": "*",
     "tsup": "^6.1.3",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^1.14.0"
   }
 }
